force-app/main/default/objects/FE_Enhancement_Request__c/FE_Enhancement_Request__c.object-meta.xml
<CustomObject>
    <description>To manage detailed product enhancement requests, potentially originating from feedback.</description>
    <label>FE Enhancement Request</label>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Enhancement Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FE Enhancement Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>