force-app/main/default/objects/FE_Enhancement_Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user responsible for the enhancement.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enhancement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>