force-app/main/default/objects/FE_Enhancement_Request__c/fields/Feature_Module__c.field-meta.xml
<CustomField>
    <fullName>Feature_Module__c</fullName>
    <description>Categorizes the enhancement.</description>
    <label>Feature Module</label>
    <referenceTo>FE_Feature_Module__c</referenceTo>
    <relationshipName>Enhancement_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>