force-app/main/default/objects/FE_Enhancement_Request__c/fields/Related_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Related_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Feedback</label>
    <referenceTo>FE_Feedback__c</referenceTo>
    <relationshipName>Enhancement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>