force-app/main/default/objects/FE_Enhancement_Request__c/fields/Target_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Release_Date__c</fullName>
    <label>Target Release Date</label>
    <type>Date</type>
</CustomField>