force-app/main/default/objects/FE_Enhancement_Request__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Concise title for the enhancement.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>