force-app/main/default/objects/FE_Enhancement_Request__c/validationRules/Target_Date_Required_If_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Date_Required_If_In_Progress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;In Progress&apos;), ISBLANK(Target_Release_Date__c))</errorConditionFormula>
    <errorDisplayField>Target_Release_Date__c</errorDisplayField>
    <errorMessage>Target Release Date is required if status is &apos;In Progress&apos;.</errorMessage>
</ValidationRule>